--- a/src/pages/newTask.scss
+++ b/src/pages/newTask.scss
@@ -1,7 +1,6 @@
-.error-message {
-  color: #ff3333;
-}
-
+@charset "utf-8";
+@use "variables";
+@use "error";
 .new-task {
   width: 1000px;
   margin: 0 auto;
@@ -21,9 +20,10 @@
 }
 
 .new-task-button {
-  background-color: #242F9B;
+  background-color: variables.$theme_color;
   color: #ffffff;
   width: 80px;
   height: 40px;
   border-radius: 5px;
-}/*# sourceMappingURL=newTask.css.map */
+}
+
