--- a/src/pages/signUp.css
+++ b/src/pages/signUp.css
@@ -1,9 +1,12 @@
-@charset "utf-8";
+.error-message {
+  color: #ff3333;
+}
 
 .signup {
   width: 500px;
   margin: 0 auto;
 }
+
 .signup-form {
   margin: 25px 0;
   color: #555555;
@@ -22,8 +25,4 @@
   width: 100px;
   height: 40px;
   border-radius: 5px;
-}
-
-.error-message {
-  color: #ff3333;
-}
+}/*# sourceMappingURL=signUp.css.map */
