--- a/src/pages/signUp.scss
+++ b/src/pages/signUp.scss
@@ -1,31 +1,26 @@
-.signin {
+@charset "utf-8";
+@use "variables";
+@use "error";
+.signup {
   width: 500px;
   margin: 0 auto;
 }
-
-.signin-form {
+.signup-form {
   margin: 25px 0;
-}
-
-.email-label, .password-label {
   color: #555555;
 }
 
-.email-input, .password-input {
+.email-input, .name-input, .password-input {
   width: 100%;
   font-size: large;
   height: 30px;
   margin-bottom: 25px;
 }
 
-.signin-button {
-  background-color: #242F9B;
+.signup-button {
+  background-color:variables.$theme_color;
   color: #ffffff;
   width: 100px;
   height: 40px;
   border-radius: 5px;
 }
-
-.error-message {
-  color: #ff3333;
-}/*# sourceMappingURL=signin.css.map */
